// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksView renders status scan <Failed> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "deviceConnectActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "fetchScanResults": undefined,
          "telemetryEventHandler": undefined,
        },
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowFrameActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "deviceConnectActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "deviceActions": undefined,
            "fetchScanResults": undefined,
            "telemetryEventHandler": undefined,
          },
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowFrameActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        isScanning={false}
      />
      <DeviceDisconnectedPopup
        deviceName="TEST DEVICE"
        onConnectNewDevice={[Function]}
        onRescanDevice={[Function]}
      />
    </main>
  </div>
</div>
`;

exports[`AutomatedChecksView renders status scan <Scanning> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "deviceConnectActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "fetchScanResults": undefined,
          "telemetryEventHandler": undefined,
        },
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowFrameActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "deviceConnectActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "deviceActions": undefined,
            "fetchScanResults": undefined,
            "telemetryEventHandler": undefined,
          },
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowFrameActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        isScanning={true}
      />
    </main>
  </div>
</div>
`;

exports[`AutomatedChecksView renders status scan <undefined> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "deviceConnectActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "fetchScanResults": undefined,
          "telemetryEventHandler": undefined,
        },
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowFrameActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "deviceConnectActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "deviceActions": undefined,
            "fetchScanResults": undefined,
            "telemetryEventHandler": undefined,
          },
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowFrameActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        isScanning={false}
      />
    </main>
  </div>
</div>
`;
